--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -191,22 +191,21 @@
         }
 
         &.btn-default {
-            border-color: @cp_buttons-default-border;
-            color: @cp_buttons-default-color;
+            background-color: @cp_buttons-default-bg;
+            color: @cp_buttons-default-fg;
+            border-color: @cp_buttons-default-bg;
             &:hover, &:not(:disabled):active, &:focus {
-                border-color: @cp_buttons-default-border;
-                color: @cp_buttons-default-color;
-                background-color: @cp_buttons-default;
+                background-color: fade(@cryptpad_text_col, 20%);
+                border-color: @cryptpad_text_col;
+                color: @cryptpad_text_col;
             }
         }
         &.btn-default-alt {
-            border-color: @cp_buttons-default-alt-color;
-            color: @cp_buttons-default-alt-color;
-            background-color: @cp_buttons-default-color;
+            border-color: @cp_buttons-default-alt-fg;
+            color: @cp_buttons-default-alt-fg;
+            background-color: @cp_buttons-default-alt-bg;
             &:hover, &:not(:disabled):active, &:focus {
-                border-color: @cp_buttons-default-color;
-                color: @cp_buttons-default-color;
-                background-color: @cp_toolbar-fade3;
+                background-color: fade(@cryptpad_text_col, 20%);
             }
         }
 
