Fix also view my profile section

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -90,6 +90,9 @@
     .cp-app-profile-displayname {
         margin-top: 1rem;
     }
+    .cp-app-profile-section:empty {
+        display: none;
+    }
     .cp-app-profile-displayname, .cp-app-profile-link, .cp-app-profile-section {
         margin-bottom: 1rem;
         input {
