Fix btn-default style issue

--- a/customize.dist/src/less2/include/colortheme.less
+++ b/customize.dist/src/less2/include/colortheme.less
@@ -161,7 +161,9 @@
 // Buttons
 @cp_buttons-fg: @cryptpad_color_brand;
 @cp_buttons-hover: @cryptpad_color_brand_fadest;
+@cp_buttons-default: #CCC;
 @cp_buttons-default-color: @cryptpad_text_col;
+@cp_buttons-default-border: @cryptpad_text_col;
 @cp_buttons-default-bg: @cryptpad_color_grey_200;
 @cp_buttons-default-fg: @cryptpad_text_col;
 @cp_buttons-default-alt-bg: @cryptpad_color_white;
