add focus to kanban tags #1809

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -515,6 +515,9 @@
                         background-color: @cp_kanban-fg;
                         color: @cp_kanban-item-bg;
                     }
+                    &:focus-visible {
+                        outline: @variables_focus_style;
+                    }
                 }
             }
         }
