--- a/customize.dist/src/less2/include/help.less
+++ b/customize.dist/src/less2/include/help.less
@@ -5,6 +5,7 @@
  */
 
 @import (reference) "./colortheme-all.less";
+@import (reference) "./variables.less";
 
 .help_main () {
     --LessLoader_require: LessLoader_currentFile();
@@ -34,6 +35,10 @@
             a {
                 color: @cp_help-link;
                 text-decoration: underline;
+                &:focus-visible {
+                    outline: @variables_focus_style;
+                    border-radius: @variables_radius;
+                }
             }
             h1 {
                 font-size: 20px;
