fix button functionality #1843

--- a/customize.dist/src/less2/include/help.less
+++ b/customize.dist/src/less2/include/help.less
@@ -22,11 +22,17 @@
         }
 
         .cp-help-close {
+            background: none;
+            border: none;
             position: absolute;
             color: @cryptpad_text_col;
             top: 5px;
             right: 5px;
             cursor: pointer;
+            &:focus-visible {
+                outline: @variables_focus_style;
+                border-radius: @variables_radius;
+            }
         }
         .cp-help-text {
             color: @cp_help-fg;
