fix notifications responsiveness #1781

--- a/www/notifications/app-notifications.less
+++ b/www/notifications/app-notifications.less
@@ -109,8 +109,7 @@
                 }
                 .cp-avatar-calendar {
                     font-size: 45px;
-                    padding: 0 12px;
-                    overflow: hidden;
+                    padding: 12px;
                 }
                 &.cp-app-notification-archived {
                     background-color: @cp_notif-bg;
@@ -125,17 +124,14 @@
                     flex-direction: row;
                     justify-content: flex-start;
                     align-items: center;
-                    margin: 0.2rem;
                     p {
                         display: inline-block;
                         margin: 1rem 1rem;
                         flex: 1;
-                        min-width: 0;
                     }
                     .notification-time {
-                        margin: 1rem 1rem;
                         color: grey;
-                        margin-left: auto;
+                        margin: 1rem 1rem 1rem auto;
                     }
                 }
 
