add margin for notification content #1781

--- a/www/notifications/app-notifications.less
+++ b/www/notifications/app-notifications.less
@@ -124,6 +124,7 @@
                     flex-direction: row;
                     justify-content: flex-start;
                     align-items: center;
+                    margin: 0.1rem;
                     p {
                         display: inline-block;
                         margin: 1rem 1rem;
