--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -64,7 +64,10 @@
     }
 
     .cp-markdown-toolbar {
-        height: @toolbar_line-height;
+        min-height: @toolbar_line-height;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
         background-color: @cp_toolbar-bg;
         color: @cp_toolbar-fg;
         display: none;
@@ -84,6 +87,12 @@
         }
         button:nth-of-type(1) {
             margin-left: 0.3rem;
+        }
+        
+        @media screen and (max-width: @browser_media-medium-screen) {
+            button:nth-of-type(1) {
+                margin-left: 0;
+            }
         }
     }
 
