Keep margin on small screens #1831

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -93,6 +93,7 @@
             button:nth-of-type(1) {
                 margin-left: 0;
             }
+            margin-left: 0.3rem;
         }
     }
 
