Remove side splitter from drive on mobile #1092

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -138,6 +138,12 @@
                     display: none;
                 }
             }
+
+            #cp-app-drive-content-container {
+                .cp-splitter {
+                    display: none;
+                }
+            }
         }
     }
 
