change text style

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -201,7 +201,11 @@
                 span {
                     overflow: hidden;
                     word-break: break-word;
+                    white-space: nowrap;
                     text-overflow: ellipsis;
+                    .event-description{
+                        white-space: normal;
+                    }
                 }
             }
             .tui-full-calendar-section-button-save {
