Make toolbar button outline fully visible #1831

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -65,6 +65,7 @@
 
     .cp-markdown-toolbar {
         min-height: @toolbar_line-height;
+        padding: 0.1rem 0;
         height: auto;
         flex-wrap: wrap;
         background-color: @cp_toolbar-bg;
