--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -71,7 +71,6 @@
         background-color: @cp_toolbar-bg;
         color: @cp_toolbar-fg;
         display: none;
-        margin-left: 0.3rem;
         button {
             height: @toolbar_line-height !important;
             outline: 0;
@@ -84,6 +83,14 @@
             }
             &:focus-visible {
                 outline: @variables_focus_style;
+            }
+        }
+        button:nth-of-type(1) {
+            margin-left: 0.3rem;
+        }
+        @media screen and (max-width: @browser_media-medium-screen) {
+            button:nth-of-type(1) {
+                margin-left: 0;
             }
         }
     }
