--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -499,7 +499,7 @@
             }
         }
     }
-
+    
     /* CONTENT */
     #cp-app-drive-content-container {
         display: flex;
@@ -518,6 +518,13 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
+            touch-action: none;
+            -ms-touch-action: none;
+            -webkit-touch-action: none;
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
             &:hover {
                 border-left: 1px solid @cryptpad_text_col;
             }
