Refactor of markdown toolbar buttons #1831

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -77,7 +77,10 @@
             border-radius: @variables_radius;
             color: @toolbar-color;
             .toolbar_button;
-            font: normal normal normal 14px/1 FontAwesome;
+            .fa {
+                font: normal normal normal 14px/1 FontAwesome;
+                font-family: FontAwesome;
+            }
             &:hover {
                 background-color: contrast(@cp_toolbar-bg, darken(@cp_toolbar-bg, 5%), lighten(@cp_toolbar-bg, 5%));
             }
