--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -834,6 +834,7 @@
                     }
                     .cp-markdown-toolbar {
                         display: block;
+                        background-color: transparent;
                     }
                 }
                 .cp-form-edit-block {
