add `aria-label` to notification content + fix notification outline

--- a/www/notifications/app-notifications.less
+++ b/www/notifications/app-notifications.less
@@ -125,6 +125,10 @@
                     justify-content: flex-start;
                     align-items: center;
                     margin: 0.1rem;
+                    &:focus-visible {
+                        outline: @variables_focus_style;
+                        border-radius: @variables_radius;
+                    }
                     p {
                         display: inline-block;
                         margin: 1rem 1rem;
