Add markdown toggle button to forms #1831

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -431,6 +431,24 @@
                     }
                 }
 
+                .cp-editor-wrapper {
+                    .cp-markdown-toggle-row {
+                        margin: 0.5rem 0;
+                        position: relative;
+                        .cp-markdown-toolbar-toggle-button {
+                            padding: 3px 10px;
+                            height: 32px;
+                            margin: 0;
+                            line-height: 1;
+                            border-radius: @variables_radius;
+                            display: inline-flex;
+                        }
+                        .cp-markdown-toolbar-toggle-button i.fa {
+                            margin: 0 !important;
+                        }
+                    }
+                }
+
                 .cp-form-creator-add-inline {
                     display: flex;
                     flex-flow: row;
