--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -120,11 +120,11 @@
         }
         margin-bottom: 5px;
     }
-    .markdown-label-row {
+    .cp-markdown-label-row {
         margin-bottom: 0.5rem;
         position: relative;
     }
-    .markdown-label-row label {
+    .cp-markdown-label-row label {
         display: inline-block;
         margin: 0;
         vertical-align: middle;
