Add toggle button to profile #1831

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -110,6 +110,9 @@
             margin: 5px !important;
         }
     }
+    .cp-markdown-toggle-row {
+        margin-bottom: 0.5rem;
+    }
 
     .cp-app-profile-resizer {
         text-align: center;
