Minor fixes + add label to all buttons #1831

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -443,9 +443,6 @@
                             border-radius: @variables_radius;
                             display: inline-flex;
                         }
-                        .cp-markdown-toolbar-toggle-button i.fa {
-                            margin: 0 !important;
-                        }
                     }
                 }
 
@@ -840,6 +837,7 @@
                     border: 1px solid @cp_forms-border;
                     border-radius: @variables_radius;
                     margin-top: 0.5rem;
+                    padding: 1px; 
                     .CodeMirror {
                         cursor: default;
                         flex: 1;
