--- a/customize.dist/src/less2/include/badges.less
+++ b/customize.dist/src/less2/include/badges.less
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2025 XWiki CryptPad Team <contact@cryptpad.org> and contributors
+ *
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 @import (reference) "./colortheme-all.less";
 @import (reference) "./variables.less";
 .badges_vars(
