make dialog content accessible screen readers announce alert dialogs

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -324,7 +324,7 @@
                 min-width: 88px;
             }
 
-            nav {
+            nav, section {
                 padding: @alertify_padding-base;
                 text-align: right;
                 button, div.cp-button-confirm {
