--- a/customize.dist/src/less2/pages/page-register.less
+++ b/customize.dist/src/less2/pages/page-register.less
@@ -66,7 +66,7 @@
             display: none;
         }
 
-        nav {
+        nav, section {
             display: flex;
             justify-content: flex-end;
             align-items: flex-end;
