--- a/customize.dist/src/less2/include/loading.less
+++ b/customize.dist/src/less2/include/loading.less
@@ -110,6 +110,7 @@
         overflow-y: auto;
         a {
             color: @cp_loading-link;
+            border-radius: @variables_radius;
         }
         p:last-child {
             margin-bottom: 0;
