change span into button

--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -323,9 +323,10 @@
                 justify-content: space-between;
                 .cp-creation-template-more {
                     font-size: 30px;
-                    cursor: pointer;
                     margin: 0 5px;
                     text-align: center;
+                    background-color: transparent;
+                    border-color: transparent;
                     &:first-child {
                         left: 5px;
                     }
