--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -324,7 +324,7 @@
                 min-width: 88px;
             }
 
-            nav, section {
+            nav {
                 padding: @alertify_padding-base;
                 text-align: right;
                 button, div.cp-button-confirm {
