Fix creation page dark theme color

--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -327,6 +327,7 @@
                     text-align: center;
                     background-color: transparent;
                     border-color: transparent;
+                    color: @cryptpad_text_col;
                     &:first-child {
                         left: 5px;
                     }
