add border-radius to buttons

--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -328,6 +328,7 @@
                     background-color: transparent;
                     border-color: transparent;
                     color: @cryptpad_text_col;
+                    border-radius: @variables_radius;
                     &:first-child {
                         left: 5px;
                     }
