add outline to links

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -700,6 +700,10 @@
                             a {
                                 color: @cryptpad_color_link;
                             }
+                            a:focus-visible {
+                                outline: @variables_focus_style;
+                                border-radius: @variables_radius;
+                            }
                         }
                         .cp-form-required-radio {
                             flex-direction: row;
