--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -112,6 +112,9 @@
     }
     .cp-markdown-toggle-row {
         margin-bottom: 0.5rem;
+        .btn.cp-markdown-toggle-button {
+            .markdown-toolbar-button-style() !important;
+        }
     }
 
     .cp-app-profile-resizer {
