fix: resolve RTL layout issues in LESS

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -170,6 +170,10 @@
                 margin-bottom: @alertify_padding-base;
                 margin: 0;
                 overflow: auto;
+
+                [dir='rtl'] & {
+                    text-align: right;
+                }
                 &:last-child {
                     margin-bottom: 0;
                 }
